--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.idril_n">
+    package="com.example.idril">
 
     <application
         android:allowBackup="true"
@@ -8,6 +8,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.IDRILN" />
+        android:theme="@style/Theme.Idril">
+        <activity android:name=".activity.AuthorizationActivity"/>
+        <activity android:name=".activity.ReviewsActivity"/>
+        <activity android:name=".activity.RegistrationActivity"/>
+        <activity android:name=".activity.ProductsActivity"/>
+        <activity android:name=".activity.SplashActivity"/>
+
+        <activity
+            android:name=".activity.BrandsActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
